      would have been used to report spam rather than sending the report.
  * debchange:
    + Add lenny-backports and lenny-volatile to the list of recognised
      distributions. (Closes: #514818)
    + Don't accept "sarge", "etch" or "lenny" as valid distributions. dak
      requires suite names (e.g. "stable") rather than codenames.
  * licensecheck:
    + Remove C /* */ comments. Based on a patch by Jörg Sommer.
    + Identify another form of GPL wording.
    + Add .xs (Perl XS files) and .vala (GNOME Vala source files) to the
      default list of files to process. (Closes: #513770, #514337)
    + Fix a bug in a regular expression which meant that .h files weren't
      included in the default list of files to search.
  * README.newscripts: Correct the "svn propset" syntax added in the previous
    upload.

 -- Adam D. Barratt <adam@adam-barratt.org.uk>  Wed, 21 Jan 2009 19:48:47 +0000

devscripts (2.10.45) unstable; urgency=low

  [ Patrick Schoenfeld ]
  * debsnap: Added new script from Ron Lee and David Paleino,
    which grabs source packages from snapshot.debian.net.
    (Closes: #511345)
  * Add a hint to README.newscripts that new scripts might need a modification
    to debian/copyright

  [ Adam D. Barratt ]
  * debchange:
    + When adding a NEWS item, automatically propagate the urgency from the
      changelog. (Closes: #511911)
    + Make -v and -l interoperate with NEWS files properly again.
  * debcheckout: Fix a typo and perform some QA on the manpage.
  * debdiff: Default to comparing source packages in the order they were
    passed on the command line once more, rather than using the "automagic
    version sorting" introduced in 2.10.41.  The new DEBDIFF_AUTO_VER_SORT
    configuration file option allows the default behaviour to be controlled.
    (Closes: #512290)
  * debsign: Add further quoting around the use and generation of temporary
    directory names, in case $TMPDIR contains spaces.