@@ -218,7 +218,7 @@ Increment the Debian release number for a Debian Security Team non-maintainer
 upload, and add a Security Team upload changelog comment.
 .TP
 .B \-\-bpo
-Increment the Debian release number for a upload to etch-backports,
+Increment the Debian release number for an upload to lenny-backports,
 and add a backport upload changelog comment.
 .TP
 .B \-\-local ", " \-l \fIsuffix\fR
